--- a/src/input/content/pages/feeds.njk
+++ b/src/input/content/pages/feeds.njk
@@ -15,11 +15,11 @@ eleventyNavigation:
     <thead>
       <tr>
         <th></th>
-        <th>🌱 Digital garden</th>
-        <th>📝 Blog</th>
-        <th>📌 Bookmarks</th>
-        <th>👩🏼‍💻 Projects</th>
-        <th>🌐 Everything</th>
+        <th>{% emoji "🌱" %} Digital garden</th>
+        <th>{% emoji "📝" %} Blog</th>
+        <th>{% emoji "📌" %} Bookmarks</th>
+        <th>{% emoji "👩🏼‍💻" %} Projects</th>
+        <th>{% emoji "🌐" %} Everything</th>
       </tr>
     </thead>
     <tbody>
