--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -71,22 +71,22 @@ eleventyImport:
 				</details-utils>
 			</li>
 			<li>
-				<span aria-hidden="true">🏳️‍⚧️</span> I'm an incredibly queer pansexual trans woman.
+				{% emoji "🏳️‍⚧️" %} I'm an incredibly queer pansexual trans woman.
 			</li>
 			<li>
-				<span aria-hidden="true">🧠</span> I'm an AuDHD (autistic and <a href="/garden/adhd"><abbr title="Attention Deficit Hyperactivity Disorder">ADHD</abbr></a>) neurodivergent.
+				{% emoji "🧠" %} I'm an AuDHD (autistic and <a href="/garden/adhd"><abbr title="Attention Deficit Hyperactivity Disorder">ADHD</abbr></a>) neurodivergent.
 			</li>
 			<li>
-				<span aria-hidden="true">🐈‍⬛</span> I have a little rascal of a cat named <a href="/lulu">Lulu</a>, who I love to bits.
+				{% emoji "🐈‍⬛" %} I have a little rascal of a cat named <a href="/lulu">Lulu</a>, who I love to bits.
 			</li>
 			<li>
-				<span aria-hidden="true">📺</span> I love all kinds of animation (anime, cartoons, etc.).
+				{% emoji "📺" %} I love all kinds of animation (anime, cartoons, etc.).
 			</li>
 			<li>
-				<span aria-hidden="true">🌏</span> I live on the edge of Bunurong and Wurundjeri Country, near Naarm (Melbourne), Australia.
+				{% emoji "🌏" %} I live on the edge of Bunurong and Wurundjeri Country, near Naarm (Melbourne), Australia.
 			</li>
 			<li class="[ spotify-playing ]">
-				<span aria-hidden="true">🎵</span> The last song I listened to was "<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="song">Never Gonna Give You Up</a>" by <em class="artist">Rick Astley</em>.
+				{% emoji "🎵" %} The last song I listened to was "<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="song">Never Gonna Give You Up</a>" by <em class="artist">Rick Astley</em>.
 			</li>
 		</ul>
 		<div class="[ flow ]">
