--- a/src/input/content/pages/archive.njk
+++ b/src/input/content/pages/archive.njk
@@ -4,10 +4,18 @@ title: Archive
 eleventyNavigation:
   key: Archive
   parent: Writing
-  order: 5
+  order: 4
 eleventyImport:
   collections: ["allSortedByDate"]
 ---
+
+<a href="#feed" class="[ visually-hidden ]">Skip to posts</a>
+
+<div>
+	{%- md -%}
+	This is an archive of all my different posts, also avaliable in your favourite flavour of feed [RSS](/feed.rss), [Atom](/feed.atom) or [JSON](/feed.json).
+	{%- endmd -%}
+</div>
 
 <h2>
   Linked posts graph
@@ -27,7 +35,7 @@ eleventyImport:
   {%- endif -%}
 {%- endfor -%} #}
 
-<ul class="[ feed ]">
+<ul id="feed" class="[ feed ]">
 	{%- for post in posts %}
 		{%- if post.data.stage -%}
 			{%- set stage = post.data.stage -%}
