--- a/src/input/content/pages/mastodon.njk
+++ b/src/input/content/pages/mastodon.njk
@@ -11,20 +11,42 @@ eleventyNavigation:
 	{%- for post in mastodon.items -%}
 		<li>
 			<sl-card class="[ feed-item-card ]">
-				<div class="[ flow ]">
-					{{ post.content | safe }}
-					{%- if post["media:content"] -%}
-						<div style="columns: {{ post["media:content"].length }}">
-							{%- for image in post["media:content"] -%}
-								{%- set extension = image["$"].url | getUrlExtension -%}
-								{%- if extension === "mp4" -%}
-									<video aria-label="{{ image["media:description"][0]["_"] }}" src="{{ image["$"].url }}" controls autoplay loop playsinline></video>
-								{%- endif -%}
-								{%- image image["$"].url, image["media:description"][0]["_"] -%}
-							{%- endfor -%}
-						</div>
+				{%- if post.content.includes("<hr>") -%}
+					<details class="[ padding-0 ]">
+						<summary>
+							{{ post.content | split("<hr>") | first | striptags }}
+						</summary>
 					{%- endif -%}
-				</div>
+					<div class="[ flow ]">
+						{%- if post.content.includes("<hr>") -%}
+							{{ post.content | replace(r/^.+<hr>/gim, "") | safe }}
+						{%- else -%}
+							{{ post.content | safe }}
+						{%- endif -%}
+						{%- if post["media:content"] -%}
+							<div style="columns: {{ post["media:content"].length }}">
+								{%- for image in post["media:content"] -%}
+									{%- if image["media:rating"][0]["_"] === "adult" -%}
+										<details class="[ padding-0 ]">
+											<summary>
+												Sensitive media
+											</summary>
+										{%- endif -%}
+										{%- set extension = image["$"].url | getUrlExtension -%}
+										{%- if extension === "mp4" -%}
+											<video aria-label="{{ image["media:description"][0]["_"] }}" src="{{ image["$"].url }}" controls loop playsinline></video>
+										{%- endif -%}
+										{%- image image["$"].url, image["media:description"][0]["_"] -%}
+										{%- if image["media:rating"][0]["_"] === "adult" -%}
+										</details>
+									{%- endif -%}
+								{%- endfor -%}
+							</div>
+						{%- endif -%}
+					</div>
+					{%- if post.content.includes("<hr>") -%}
+					</details>
+				{%- endif -%}
 				<div slot="footer" class="[ flex align-center ]">
 					<sl-tooltip content="Posted on {{ post.isoDate | dateObj | dateToLocaleDateFull }}">
 						<span class="[ flex align-center gap-1ch ]">
