--- a/src/input/css/utilities/visually-hidden.css
+++ b/src/input/css/utilities/visually-hidden.css
@@ -1,10 +1,8 @@
-.visually-hidden {
-	border: 0;
-	clip: rect(0 0 0 0);
-	height: auto;
-	margin: 0;
+/* stylelint-disable-next-line selector-not-notation */
+.visually-hidden:not(:focus):not(:active):not(:focus-within) {
+	clip-path: inset(50%);
+	height: 1px;
 	overflow: hidden;
-	padding: 0;
 	position: absolute;
 	white-space: nowrap;
 	width: 1px;
