--- a/src/_layouts/base-without-header.njk
+++ b/src/_layouts/base-without-header.njk
@@ -44,13 +44,13 @@
 
 		{%- include "meta.njk" -%}
 	</head>
-	<body>
+	<body class="[ h-card ]">
 		<a class="[ skip-link ] [ button ]" href="#content">Skip to content</a>
 
 		{%- include "header.njk" -%}
 
 		<!-- tabindex fixes focus issue: https://benmyers.dev/blog/skip-links/#tldr -->
-		<main id="content" tabindex="-1" class="[ wrapper flow ]" style="--wrapper-size: 100ch;"{% if page.url !== "/" %} data-pagefind-body{% endif %}>
+		<main id="content" tabindex="-1" class="[ wrapper flow ] [ h-entry ]" style="--wrapper-size: 100ch;"{% if page.url !== "/" %} data-pagefind-body{% endif %}>
 			{{ content | safe }}
 		</main>
 
