🐛 fix: fixing up microformats2

--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -11,8 +11,8 @@ eleventyImport:
 <div class="[ home ]">
 	<header class="[ hero ]">
 		<h1>
-			<span class="visually-hidden">Hi, I'm Elly. I like creating delightful, magical, and accessible art with code.</span>
-			<span class="detitlify" aria-hidden="true">
+			<span class="[ p-note ] [ visually-hidden ]">Hi, I'm Elly. I like creating delightful, magical, and accessible art with code.</span>
+			<span class="[ detitlify ]" aria-hidden="true">
 				Hi, I’m <span class="[ logo-inline ]" title="Elly">&lt;e//y&gt;</span>
 			</span>
 			<span aria-hidden="true">I like creating <span class="stroke" style="--color: var(--accent-solid); --thickness: 1.5px;">delightful</span>, <span class="stroke" style="--color: var(--accent-solid); --thickness: 1.5px;">magical</span>, and <span class="stroke" style="--color: var(--accent-solid); --thickness: 1.5px;">accessible</span> art with code<span style="color: var(--accent-solid);">.</span></span>
@@ -26,6 +26,7 @@ eleventyImport:
 	</header>
 
 	<article class="[ about ]">
+		<img class="[ u-photo ]" src="/assets/img/pfp.jpg" alt='A digital drawing of me a white woman with blonde hair, smiling and doing a peace sign, wearing a white "golf le fleur" jumper.' hidden>
 		<ul role="list" class="[ p-note ] [ flow ]">
 			<li>
 				<details-utils animate>
