--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -63,6 +63,7 @@ This post hasn't been updated a long time, so it might be kinda crusty.
 		{%- endmd -%}
 	{%- endif -%}
 	{{ content | safe }}
+	<a href="https://brid.gy/publish/mastodon" hidden></a>
 </article>
 {%- if backlinks === [] -%}
 	<aside class="[ flow content-width ]" data-pagefind-ignore>
