--- a/src/_includes/date.njk
+++ b/src/_includes/date.njk
@@ -1,8 +1,8 @@
 <span>
-	<sl-tooltip content="{{ label }} {{ date | dateObj | dateToLocaleDateFull }}">
+	<sl-tooltip content="{{ label }} {{ date | dateToLocaleDateFull }}">
 		<span class="[ flex align-center gap-1ch ]">
 			<sl-icon class="[ icon ]" library="fa" name="far-calendar{%- if label === "Last modified" -%}-plus{%- endif -%}" label="{{ label }}"></sl-icon>
-			<sl-relative-time class="[ date ] [ dt-published ]" date="{{ date | dateObj | dateToISO }}"></sl-relative-time>
+			<time class="[ {% if label === "Created" %}dt-published{% else %}dt-updated{% endif %} ]" datetime="{{ date | dateToISO }}">{{ date | dateToRelative }}</time>
 		</span>
 	</sl-tooltip>
 </span>
