--- a/src/input/content/pages/mastodon.njk
+++ b/src/input/content/pages/mastodon.njk
@@ -7,7 +7,7 @@ eleventyNavigation:
   order: 3
 ---
 
-<ul class="[ feed ] [ h-feed ]">
+<ul class="[ feed ]">
 	{%- for post in mastodon.items -%}
 		<li class="[ h-entry ]">
 			<sl-card class="[ feed-item-card ]">
