--- a/src/_layouts/base-without-header.njk
+++ b/src/_layouts/base-without-header.njk
@@ -5,27 +5,12 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- specify viewport: https://developers.google.com/speed/docs/insights/ConfigureViewport -->
-		<title>{{ title }} | Elly Loel</title>
+		<title>{{ title }} - Elly Loel</title>
 
 		<!-- Include stylesheets here. Concatenate & minify for performance: https://developers.google.com/speed/docs/insights/MinifyResources -->
 		<link rel="stylesheet" href="/css/style.css">
 
-		<script>
-			const localStorageColorScheme = localStorage.getItem("color-scheme");
-			const body = document.documentElement;
-			// if there's a color-scheme id in localstorage, use it, if not use auto.
-			body.setAttribute("color-scheme", localStorageColorScheme || "auto");
-			body.setAttribute(
-				"class", localStorageColorScheme
-				?.includes("light")
-					? "sl-theme-light"
-					: localStorageColorScheme
-						?.includes("dark")
-							? "sl-theme-dark"
-							: window.matchMedia("(prefers-color-scheme: light)").matches
-								? "sl-theme-light"
-								: "sl-theme-dark");
-		</script>
+		{%- include "theme-init.njk" -%}
 
 		<!-- Include scripts here. Concatenate & minify for performance: https://developers.google.com/speed/docs/insights/MinifyResources -->
 		{%- rollup "src/input/js/main.js" | url -%}
@@ -50,7 +35,21 @@
 		{%- include "header.njk" -%}
 
 		<!-- tabindex fixes focus issue: https://benmyers.dev/blog/skip-links/#tldr -->
-		<main id="content" tabindex="-1" class="[ wrapper flow ] {% if page.url !== "/" and page.url !== "/about/" %}[ h-entry ]{% endif %}" style="--wrapper-size: 100ch;"{% if page.url !== "/" %} data-pagefind-body{% endif %}>
+		<main
+			id="content"
+			tabindex="-1"
+			class="[ wrapper flow ] 
+				{%- if page.url !== "/" and page.url !== "/about/" -%}
+					[ h-entry ]
+				{%- endif -%}
+				{%- if page.url === "/garden/" or page.url === "/blog/" or page.url === "/projects/" or page.url === "/til/" or page.url === "/archive/" or page.url === "/bookmarks/" -%}
+					[ h-feed ]
+				{%- endif -%}"
+			style="--wrapper-size: 100ch;"
+			{% if page.url !== "/" %}
+				data-pagefind-body
+			{% endif %}
+		>
 			{{ content | safe }}
 		</main>
 
