--- a/src/_layouts/base-without-header.njk
+++ b/src/_layouts/base-without-header.njk
@@ -38,12 +38,11 @@
 		<main
 			id="content"
 			tabindex="-1"
-			class="[ wrapper flow ] 
-				{%- if page.url !== "/" and page.url !== "/about/" -%}
-					[ h-entry ]
-				{%- endif -%}
+			class="[ wrapper flow ]
 				{%- if page.url === "/garden/" or page.url === "/blog/" or page.url === "/projects/" or page.url === "/til/" or page.url === "/archive/" or page.url === "/bookmarks/" -%}
 					[ h-feed ]
+				{%- elif page.url !== "/" and page.url !== "/about/" -%}
+					[ h-entry ]
 				{%- endif -%}"
 			style="--wrapper-size: 100ch;"
 			{% if page.url !== "/" %}
