🐛 fix: fixing more microformats2 shit

--- a/src/_layouts/base-without-header.njk
+++ b/src/_layouts/base-without-header.njk
@@ -39,7 +39,7 @@
 			id="content"
 			tabindex="-1"
 			class="[ wrapper flow ]
-				{%- if page.url === "/garden/" or page.url === "/blog/" or page.url === "/projects/" or page.url === "/til/" or page.url === "/archive/" or page.url === "/bookmarks/" -%}
+				{%- if page.url === "/garden/" or page.url === "/blog/" or page.url === "/projects/" or page.url === "/til/" or page.url === "/archive/" or page.url === "/bookmarks/" or page.url === "/mastodon/" -%}
 					[ h-feed ]
 				{%- elif page.url !== "/" and page.url !== "/about/" -%}
 					[ h-entry ]
