--- a/src/input/content/pages/archive.njk
+++ b/src/input/content/pages/archive.njk
@@ -13,7 +13,7 @@ eleventyImport:
 
 <div>
 	{%- md -%}
-	This is an archive of all my different posts, also avaliable in your favourite flavour of feed [RSS](/feed.rss), [Atom](/feed.atom) or [JSON](/feed.json).
+	This is an archive of all my different posts, also avaliable in your favourite flavour of feed [RSS](/feed.rss), [Atom](/feed.atom) or [JSON](/feed.json).{.p-summary}
 	{%- endmd -%}
 </div>
 
