--- a/src/input/content/pages/blog.njk
+++ b/src/input/content/pages/blog.njk
@@ -13,7 +13,7 @@ eleventyImport:
 
 <div>
 	{%- md -%}
-	This is my blog, for longer form content, also avaliable in your favourite flavour of feed [RSS](/articles.rss), [Atom](/articles.atom) or [JSON](/articles.json).
+	This is my blog, for longer form content, also avaliable in your favourite flavour of feed [RSS](/articles.rss), [Atom](/articles.atom) or [JSON](/articles.json).{.p-summary}
 	{%- endmd -%}
 </div>
 
