--- a/src/input/content/pages/bookmarks.njk
+++ b/src/input/content/pages/bookmarks.njk
@@ -12,7 +12,7 @@ eleventyImport:
 
 <div>
 	{%- md -%}
-	These are [my public raindrop.io bookmarks](https://raindrop.io/ellyloel/public-33237518), also avaliable in your favourite flavour of feed [RSS](/bookmarks.rss), [Atom](/bookmarks.atom) or [JSON](/bookmarks.json).
+	These are [my public raindrop.io bookmarks](https://raindrop.io/ellyloel/public-33237518), also avaliable in your favourite flavour of feed [RSS](/bookmarks.rss), [Atom](/bookmarks.atom) or [JSON](/bookmarks.json).{.p-summary}
 	{%- endmd -%}
 </div>
 
