--- a/src/input/content/pages/projects.njk
+++ b/src/input/content/pages/projects.njk
@@ -14,7 +14,7 @@ eleventyImport:
 
 <div>
 	{%- md -%}
-	This is a collection of projects I've started, and probably not finished {% emoji "😅", "Whoops!" %}. They're also avaliable in your favourite flavour of feed [RSS](/projects.rss), [Atom](/projects.atom) or [JSON](/projects.json).
+	This is a collection of projects I've started, and probably not finished {% emoji "😅", "Whoops!" %}. They're also avaliable in your favourite flavour of feed [RSS](/projects.rss), [Atom](/projects.atom) or [JSON](/projects.json).{.p-summary}
 	{%- endmd -%}
 </div>
 
