--- a/src/input/content/pages/til.njk
+++ b/src/input/content/pages/til.njk
@@ -5,7 +5,7 @@ eleventyImport:
   collections: ["til"]
 ---
 
-<dfn>Today I Learned</dfn>
+<dfn class="[ p-summary ]">Today I Learned</dfn>
 
 <h2>
   Linked posts graph
