--- a/src/input/content/pages/garden.njk
+++ b/src/input/content/pages/garden.njk
@@ -14,7 +14,7 @@ eleventyImport:
 
 <div>
 	{%- md -%}
-	This is a collection of ideas that I'm nurturing out in the open. The notes range from seedlings, which are fresh out of my mind, to budding, which are developing into something a bit more fleshed out, to evergreen, which are polished ideas. They're also avaliable in your favourite flavour of feed [RSS](/notes.rss), [Atom](/notes.atom) or [JSON](/notes.json).
+	This is a collection of ideas that I'm nurturing out in the open. The notes range from seedlings, which are fresh out of my mind, to budding, which are developing into something a bit more fleshed out, to evergreen, which are polished ideas. They're also avaliable in your favourite flavour of feed [RSS](/notes.rss), [Atom](/notes.atom) or [JSON](/notes.json).{.p-summary}
 	{%- endmd -%}
 </div>
 
