🐛 fix: fixing css-doodle js

--- a/src/_layouts/og.njk
+++ b/src/_layouts/og.njk
@@ -77,7 +77,7 @@
 			}
 		</style>
 		<link rel="stylesheet" href="/assets/css/fonts.css">
-		<script type="module" src="/assets/js/css-doodle.js"></script>
+		{%- rollup "src/input/js/css-doodle.js" | url -%}
 	</head>
 	<body>
 		<css-doodle>
