--- a/src/input/root/feeds/feed.rss.njk
+++ b/src/input/root/feeds/feed.rss.njk
@@ -9,7 +9,7 @@ permalink: "feed.rss"
 		<atom:link href="{{ '/feed.rss' | absoluteUrl(metadata.url) }}" rel="self" type="application/rss+xml"/>
 		<description>{{ metadata.description }}</description>
 		<language>{{ metadata.lang }}</language>
-		{%- for post in collections.allSortedByDate | reverse %}
+		{%- for post in collections.allSortedByDate %}
 			{%- set absolutePostUrl = post.url | absoluteUrl(metadata.url) %}
 			<item>
 				<title>{{ post.data.title }}</title>
